--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-	"type": "module",
+	"type": "commonjs",
 	"name": "logger-bot",
 	"version": "1.0.0",
 	"description": "Logger bot - Telegram bot that helps you catch errors in your application",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"build": "tsc",
+		"tsc-watch": "tsc -w",
+		"start": "node ./dist/index.js",
+		"dev": "concurrently \"npm run tsc-watch\" \"nodemon -q ./dist/index.js\""
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.27.2",
+		"cli-color": "^2.0.3",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"typescript": "^4.8.4"
 	},
 	"devDependencies": {
+		"@types/cli-color": "^2.0.2",
+		"@types/express": "^4.17.14",
+		"@types/node": "^18.7.23",
+		"concurrently": "^7.4.0",
 		"nodemon": "^2.0.20"
 	}
 }
