feat: add telegram response object interfaces

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BOT_TOKEN=5793449796:AAHEQT2PBgeT_10QE8T50Zb481xn4IUynNU
+BOT_TOKEN=5793449796:AAFC8uvj5jaOI2ApO9XIQpst-rncjEISKoY
+CHAT_ID=-802366348
 PORT=8000
