--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
 	"type": "commonjs",
-	"name": "logger-bot",
-	"version": "1.0.0",
-	"description": "Logger bot - Telegram bot that helps you catch errors in your application",
-	"main": "./dist/index.js",
+	"name": "loggerbot",
+	"version": "1.0.1",
+	"description": "Logger Bot - Telegram bot that helps you catch errors in your application",
+	"main": "./dist/logger.umd.js",
+	"module": "./dist/logger.es.js",
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && vite build",
 		"tsc-watch": "tsc -w",
 		"start": "node ./dist/index.js",
 		"dev": "concurrently \"npm run tsc-watch\" \"nodemon -q ./dist/index.js\""
 	},
-	"author": "",
+	"author": "Aslbek Kucharov",
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.27.2",
-		"dotenv": "^16.0.2",
 		"typescript": "^4.8.4"
 	},
 	"devDependencies": {
-		"@types/cli-color": "^2.0.2",
-		"@types/express": "^4.17.14",
 		"@types/node": "^18.7.23",
 		"concurrently": "^7.4.0",
-		"nodemon": "^2.0.20"
-	}
+		"nodemon": "^2.0.20",
+		"vite": "^3.1.4"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/aslbekkucharov/logger-bot.git"
+	},
+	"keywords": [
+		"logs",
+		"logger",
+		"logger-bot",
+		"telegram-logger",
+		"telegram-logs",
+		"telegram-bot",
+		"error-logger"
+	],
+	"bugs": {
+		"url": "https://github.com/aslbekkucharov/logger-bot/issues"
+	},
+	"files": [
+		"dist"
+	],
+	"exports": {
+		".": {
+			"import": "./dist/logger.es.js",
+			"require": "./dist/logger.umd.js"
+		}
+	},
+	"homepage": "https://github.com/aslbekkucharov/logger-bot#readme"
 }
